// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createCSSTokenObject test: dark theme > should match snapshot 1`] = `
{
  "border-width": {
    "focus": {
      "1": "var(--charcoal-border-width-focus-1)",
      "2": "var(--charcoal-border-width-focus-2)",
    },
    "l": "var(--charcoal-border-width-l)",
    "m": "var(--charcoal-border-width-m)",
  },
  "color": {
    "background": {
      "default": "var(--charcoal-color-background-default)",
      "overlay": "var(--charcoal-color-background-overlay)",
      "secondary": "var(--charcoal-color-background-secondary)",
      "tertiary": "var(--charcoal-color-background-tertiary)",
    },
    "border": {
      "default": "var(--charcoal-color-border-default)",
      "disable": "var(--charcoal-color-border-disable)",
      "focus": {
        "1": "var(--charcoal-color-border-focus-1)",
        "2": "var(--charcoal-color-border-focus-2)",
        "legacy": "var(--charcoal-color-border-focus-legacy)",
      },
      "hover": "var(--charcoal-color-border-hover)",
      "hud": "var(--charcoal-color-border-hud)",
      "negative": "var(--charcoal-color-border-negative)",
      "press": "var(--charcoal-color-border-press)",
      "secondary": "var(--charcoal-color-border-secondary)",
      "selected": "var(--charcoal-color-border-selected)",
    },
    "container": {
      "default": "var(--charcoal-color-container-default)",
      "default-a": "var(--charcoal-color-container-default-a)",
      "disable": "var(--charcoal-color-container-disable)",
      "discovery": {
        "default": "var(--charcoal-color-container-discovery-default)",
        "hover": "var(--charcoal-color-container-discovery-hover)",
        "press": "var(--charcoal-color-container-discovery-press)",
      },
      "hover": "var(--charcoal-color-container-hover)",
      "hover-a": "var(--charcoal-color-container-hover-a)",
      "hud": {
        "default": "var(--charcoal-color-container-hud-default)",
        "hover": "var(--charcoal-color-container-hud-hover)",
        "press": "var(--charcoal-color-container-hud-press)",
      },
      "negative": {
        "default": "var(--charcoal-color-container-negative-default)",
        "hover": "var(--charcoal-color-container-negative-hover)",
        "press": "var(--charcoal-color-container-negative-press)",
      },
      "neutral": {
        "default": "var(--charcoal-color-container-neutral-default)",
        "hover": "var(--charcoal-color-container-neutral-hover)",
        "press": "var(--charcoal-color-container-neutral-press)",
      },
      "notice": {
        "default": "var(--charcoal-color-container-notice-default)",
        "hover": "var(--charcoal-color-container-notice-hover)",
        "press": "var(--charcoal-color-container-notice-press)",
      },
      "on-img": {
        "default": "var(--charcoal-color-container-on-img-default)",
        "hover": "var(--charcoal-color-container-on-img-hover)",
        "press": "var(--charcoal-color-container-on-img-press)",
      },
      "positive": {
        "default": "var(--charcoal-color-container-positive-default)",
        "hover": "var(--charcoal-color-container-positive-hover)",
        "press": "var(--charcoal-color-container-positive-press)",
      },
      "press": "var(--charcoal-color-container-press)",
      "press-a": "var(--charcoal-color-container-press-a)",
      "primary": {
        "default": "var(--charcoal-color-container-primary-default)",
        "hover": "var(--charcoal-color-container-primary-hover)",
        "press": "var(--charcoal-color-container-primary-press)",
      },
      "secondary": {
        "default": "var(--charcoal-color-container-secondary-default)",
        "default-a": "var(--charcoal-color-container-secondary-default-a)",
        "hover": "var(--charcoal-color-container-secondary-hover)",
        "hover-a": "var(--charcoal-color-container-secondary-hover-a)",
        "press": "var(--charcoal-color-container-secondary-press)",
        "press-a": "var(--charcoal-color-container-secondary-press-a)",
      },
      "skeleton": "var(--charcoal-color-container-skeleton)",
      "subtle": "var(--charcoal-color-container-subtle)",
      "tertiary": {
        "default": "var(--charcoal-color-container-tertiary-default)",
        "default-a": "var(--charcoal-color-container-tertiary-default-a)",
        "hover": "var(--charcoal-color-container-tertiary-hover)",
        "hover-a": "var(--charcoal-color-container-tertiary-hover-a)",
        "press": "var(--charcoal-color-container-tertiary-press)",
        "pressA": "var(--charcoal-color-container-tertiary-press-a)",
      },
    },
    "icon": {
      "default": "var(--charcoal-color-icon-default)",
      "disable": "var(--charcoal-color-icon-disable)",
      "hover": "var(--charcoal-color-icon-hover)",
      "negative": {
        "default": "var(--charcoal-color-icon-negative-default)",
        "hover": "var(--charcoal-color-icon-negative-hover)",
        "press": "var(--charcoal-color-icon-negative-press)",
      },
      "notice": {
        "default": "var(--charcoal-color-icon-notice-default)",
        "hover": "var(--charcoal-color-icon-notice-hover)",
        "press": "var(--charcoal-color-icon-notice-press)",
      },
      "on-negative": {
        "default": "var(--charcoal-color-icon-on-negative-default)",
        "hover": "var(--charcoal-color-icon-on-negative-hover)",
        "press": "var(--charcoal-color-icon-on-negative-press)",
      },
      "on-neutral": {
        "default": "var(--charcoal-color-icon-on-neutral-default)",
        "hover": "var(--charcoal-color-icon-on-neutral-hover)",
        "press": "var(--charcoal-color-icon-on-neutral-press)",
      },
      "on-notice": {
        "default": "var(--charcoal-color-icon-on-notice-default)",
        "hover": "var(--charcoal-color-icon-on-notice-hover)",
        "press": "var(--charcoal-color-icon-on-notice-press)",
      },
      "on-on-img": {
        "default": "var(--charcoal-color-icon-on-on-img-default)",
        "hover": "var(--charcoal-color-icon-on-on-img-hover)",
        "press": "var(--charcoal-color-icon-on-on-img-press)",
      },
      "on-positive": {
        "default": "var(--charcoal-color-icon-on-positive-default)",
        "hover": "var(--charcoal-color-icon-on-positive-hover)",
        "press": "var(--charcoal-color-icon-on-positive-press)",
      },
      "on-primary": {
        "default": "var(--charcoal-color-icon-on-primary-default)",
        "hover": "var(--charcoal-color-icon-on-primary-hover)",
        "press": "var(--charcoal-color-icon-on-primary-press)",
      },
      "positive": {
        "default": "var(--charcoal-color-icon-positive-default)",
        "hover": "var(--charcoal-color-icon-positive-hover)",
        "press": "var(--charcoal-color-icon-positive-press)",
      },
      "press": "var(--charcoal-color-icon-press)",
      "secondary": {
        "default": "var(--charcoal-color-icon-secondary-default)",
        "hover": "var(--charcoal-color-icon-secondary-hover)",
        "press": "var(--charcoal-color-icon-secondary-press)",
      },
      "tertiary": {
        "default": "var(--charcoal-color-icon-tertiary-default)",
        "hover": "var(--charcoal-color-icon-tertiary-hover)",
        "press": "var(--charcoal-color-icon-tertiary-press)",
      },
    },
    "text": {
      "default": "var(--charcoal-color-text-default)",
      "disable": "var(--charcoal-color-text-disable)",
      "hover": "var(--charcoal-color-text-hover)",
      "info": {
        "default": "var(--charcoal-color-text-info-default)",
        "hover": "var(--charcoal-color-text-info-hover)",
        "press": "var(--charcoal-color-text-info-press)",
      },
      "negative": {
        "default": "var(--charcoal-color-text-negative-default)",
        "hover": "var(--charcoal-color-text-negative-hover)",
        "press": "var(--charcoal-color-text-negative-press)",
      },
      "notice": {
        "default": "var(--charcoal-color-text-notice-default)",
        "hover": "var(--charcoal-color-text-notice-hover)",
        "press": "var(--charcoal-color-text-notice-press)",
      },
      "on-discovery": {
        "default": "var(--charcoal-color-text-on-discovery-default)",
        "hover": "var(--charcoal-color-text-on-discovery-hover)",
        "press": "var(--charcoal-color-text-on-discovery-press)",
      },
      "on-hud": {
        "default": "var(--charcoal-color-text-on-hud-default)",
        "hover": "var(--charcoal-color-text-on-hud-hover)",
        "press": "var(--charcoal-color-text-on-hud-press)",
      },
      "on-negative": {
        "default": "var(--charcoal-color-text-on-negative-default)",
        "hover": "var(--charcoal-color-text-on-negative-hover)",
        "press": "var(--charcoal-color-text-on-negative-press)",
      },
      "on-notice": {
        "default": "var(--charcoal-color-text-on-notice-default)",
        "hover": "var(--charcoal-color-text-on-notice-hover)",
        "press": "var(--charcoal-color-text-on-notice-press)",
      },
      "on-on-img": {
        "default": "var(--charcoal-color-text-on-on-img-default)",
        "hover": "var(--charcoal-color-text-on-on-img-hover)",
        "press": "var(--charcoal-color-text-on-on-img-press)",
      },
      "on-positive": {
        "default": "var(--charcoal-color-text-on-positive-default)",
        "hover": "var(--charcoal-color-text-on-positive-hover)",
        "press": "var(--charcoal-color-text-on-positive-press)",
      },
      "on-primary": {
        "default": "var(--charcoal-color-text-on-primary-default)",
        "hover": "var(--charcoal-color-text-on-primary-hover)",
        "press": "var(--charcoal-color-text-on-primary-press)",
      },
      "placeholder": {
        "default": "var(--charcoal-color-text-placeholder-default)",
        "hover": "var(--charcoal-color-text-placeholder-hover)",
        "press": "var(--charcoal-color-text-placeholder-press)",
      },
      "positive": {
        "default": "var(--charcoal-color-text-positive-default)",
        "hover": "var(--charcoal-color-text-positive-hover)",
        "press": "var(--charcoal-color-text-positive-press)",
      },
      "press": "var(--charcoal-color-text-press)",
      "secondary": {
        "default": "var(--charcoal-color-text-secondary-default)",
        "hover": "var(--charcoal-color-text-secondary-hover)",
        "press": "var(--charcoal-color-text-secondary-press)",
      },
      "tertiary": {
        "default": "var(--charcoal-color-text-tertiary-default)",
        "hover": "var(--charcoal-color-text-tertiary-hover)",
        "press": "var(--charcoal-color-text-tertiary-press)",
      },
      "visited": {
        "default": "var(--charcoal-color-text-visited-default)",
        "hover": "var(--charcoal-color-text-visited-hover)",
        "press": "var(--charcoal-color-text-visited-press)",
      },
    },
  },
  "paragraph-width": {
    "l": "var(--charcoal-paragraph-width-l)",
    "l-compact": "var(--charcoal-paragraph-width-l-compact)",
    "l-cozy": "var(--charcoal-paragraph-width-l-cozy)",
    "m": "var(--charcoal-paragraph-width-m)",
    "m-compact": "var(--charcoal-paragraph-width-m-compact)",
    "m-cozy": "var(--charcoal-paragraph-width-m-cozy)",
    "s": "var(--charcoal-paragraph-width-s)",
    "s-compact": "var(--charcoal-paragraph-width-s-compact)",
    "s-cozy": "var(--charcoal-paragraph-width-s-cozy)",
  },
  "radius": {
    "0": "var(--charcoal-radius-0)",
    "l": "var(--charcoal-radius-l)",
    "m": "var(--charcoal-radius-m)",
    "oval": "var(--charcoal-radius-oval)",
    "s": "var(--charcoal-radius-s)",
    "xl": "var(--charcoal-radius-xl)",
    "xs": "var(--charcoal-radius-xs)",
    "xxl": "var(--charcoal-radius-xxl)",
  },
  "space": {
    "between-checkboxes": {
      "horizontal": "var(--charcoal-space-between-checkboxes-horizontal)",
      "vertical": "var(--charcoal-space-between-checkboxes-vertical)",
    },
    "component": {
      "0": "var(--charcoal-space-component-0)",
      "10": "var(--charcoal-space-component-10)",
      "20": "var(--charcoal-space-component-20)",
      "25": "var(--charcoal-space-component-25)",
      "30": "var(--charcoal-space-component-30)",
      "40": "var(--charcoal-space-component-40)",
      "50": "var(--charcoal-space-component-50)",
    },
    "gap": {
      "gap-buttons": "var(--charcoal-space-gap-gap-buttons)",
      "gap-form-items": "var(--charcoal-space-gap-gap-form-items)",
    },
    "layout": {
      "0": "var(--charcoal-space-layout-0)",
      "10": "var(--charcoal-space-layout-10)",
      "100": "var(--charcoal-space-layout-100)",
      "20": "var(--charcoal-space-layout-20)",
      "25": "var(--charcoal-space-layout-25)",
      "30": "var(--charcoal-space-layout-30)",
      "40": "var(--charcoal-space-layout-40)",
      "50": "var(--charcoal-space-layout-50)",
      "60": "var(--charcoal-space-layout-60)",
      "70": "var(--charcoal-space-layout-70)",
      "80": "var(--charcoal-space-layout-80)",
      "90": "var(--charcoal-space-layout-90)",
    },
    "padding": {
      "padding-card": "var(--charcoal-space-padding-padding-card)",
    },
    "target": {
      "l": "var(--charcoal-space-target-l)",
      "m": "var(--charcoal-space-target-m)",
      "s": "var(--charcoal-space-target-s)",
      "xs": "var(--charcoal-space-target-xs)",
    },
  },
  "text": {
    "font-size": {
      "body": "var(--charcoal-text-font-size-body)",
      "caption": {
        "m": "var(--charcoal-text-font-size-caption-m)",
        "s": "var(--charcoal-text-font-size-caption-s)",
      },
      "heading": {
        "l": "var(--charcoal-text-font-size-heading-l)",
        "m": "var(--charcoal-text-font-size-heading-m)",
        "s": "var(--charcoal-text-font-size-heading-s)",
        "xl": "var(--charcoal-text-font-size-heading-xl)",
        "xs": "var(--charcoal-text-font-size-heading-xs)",
        "xxl": "var(--charcoal-text-font-size-heading-xxl)",
        "xxs": "var(--charcoal-text-font-size-heading-xxs)",
        "xxxl": "var(--charcoal-text-font-size-heading-xxxl)",
        "xxxs": "var(--charcoal-text-font-size-heading-xxxs)",
      },
      "paragraph": "var(--charcoal-text-font-size-paragraph)",
    },
    "font-weight": {
      "bold": "var(--charcoal-text-font-weight-bold)",
      "regular": "var(--charcoal-text-font-weight-regular)",
    },
    "line-height": {
      "body": "var(--charcoal-text-line-height-body)",
      "caption": {
        "m": "var(--charcoal-text-line-height-caption-m)",
        "s": "var(--charcoal-text-line-height-caption-s)",
      },
      "heading": {
        "l": "var(--charcoal-text-line-height-heading-l)",
        "m": "var(--charcoal-text-line-height-heading-m)",
        "s": "var(--charcoal-text-line-height-heading-s)",
        "xl": "var(--charcoal-text-line-height-heading-xl)",
        "xs": "var(--charcoal-text-line-height-heading-xs)",
        "xxl": "var(--charcoal-text-line-height-heading-xxl)",
        "xxs": "var(--charcoal-text-line-height-heading-xxs)",
        "xxxl": "var(--charcoal-text-line-height-heading-xxxl)",
        "xxxs": "var(--charcoal-text-line-height-heading-xxxs)",
      },
      "paragraph": "var(--charcoal-text-line-height-paragraph)",
    },
  },
}
`;

exports[`createCSSTokenObject test: light theme > should match snapshot 1`] = `
{
  "border-width": {
    "focus": {
      "1": "var(--charcoal-border-width-focus-1)",
      "2": "var(--charcoal-border-width-focus-2)",
    },
    "l": "var(--charcoal-border-width-l)",
    "m": "var(--charcoal-border-width-m)",
  },
  "color": {
    "background": {
      "default": "var(--charcoal-color-background-default)",
      "overlay": "var(--charcoal-color-background-overlay)",
      "secondary": "var(--charcoal-color-background-secondary)",
      "tertiary": "var(--charcoal-color-background-tertiary)",
    },
    "border": {
      "default": "var(--charcoal-color-border-default)",
      "disable": "var(--charcoal-color-border-disable)",
      "focus": {
        "1": "var(--charcoal-color-border-focus-1)",
        "2": "var(--charcoal-color-border-focus-2)",
        "legacy": "var(--charcoal-color-border-focus-legacy)",
      },
      "hover": "var(--charcoal-color-border-hover)",
      "hud": "var(--charcoal-color-border-hud)",
      "negative": "var(--charcoal-color-border-negative)",
      "press": "var(--charcoal-color-border-press)",
      "secondary": "var(--charcoal-color-border-secondary)",
      "selected": "var(--charcoal-color-border-selected)",
    },
    "container": {
      "default": "var(--charcoal-color-container-default)",
      "default-a": "var(--charcoal-color-container-default-a)",
      "disable": "var(--charcoal-color-container-disable)",
      "discovery": {
        "default": "var(--charcoal-color-container-discovery-default)",
        "hover": "var(--charcoal-color-container-discovery-hover)",
        "press": "var(--charcoal-color-container-discovery-press)",
      },
      "hover": "var(--charcoal-color-container-hover)",
      "hover-a": "var(--charcoal-color-container-hover-a)",
      "hud": {
        "default": "var(--charcoal-color-container-hud-default)",
        "hover": "var(--charcoal-color-container-hud-hover)",
        "press": "var(--charcoal-color-container-hud-press)",
      },
      "negative": {
        "default": "var(--charcoal-color-container-negative-default)",
        "hover": "var(--charcoal-color-container-negative-hover)",
        "press": "var(--charcoal-color-container-negative-press)",
      },
      "neutral": {
        "default": "var(--charcoal-color-container-neutral-default)",
        "hover": "var(--charcoal-color-container-neutral-hover)",
        "press": "var(--charcoal-color-container-neutral-press)",
      },
      "notice": {
        "default": "var(--charcoal-color-container-notice-default)",
        "hover": "var(--charcoal-color-container-notice-hover)",
        "press": "var(--charcoal-color-container-notice-press)",
      },
      "on-img": {
        "default": "var(--charcoal-color-container-on-img-default)",
        "hover": "var(--charcoal-color-container-on-img-hover)",
        "press": "var(--charcoal-color-container-on-img-press)",
      },
      "positive": {
        "default": "var(--charcoal-color-container-positive-default)",
        "hover": "var(--charcoal-color-container-positive-hover)",
        "press": "var(--charcoal-color-container-positive-press)",
      },
      "press": "var(--charcoal-color-container-press)",
      "press-a": "var(--charcoal-color-container-press-a)",
      "primary": {
        "default": "var(--charcoal-color-container-primary-default)",
        "hover": "var(--charcoal-color-container-primary-hover)",
        "press": "var(--charcoal-color-container-primary-press)",
      },
      "secondary": {
        "default": "var(--charcoal-color-container-secondary-default)",
        "default-a": "var(--charcoal-color-container-secondary-default-a)",
        "hover": "var(--charcoal-color-container-secondary-hover)",
        "hover-a": "var(--charcoal-color-container-secondary-hover-a)",
        "press": "var(--charcoal-color-container-secondary-press)",
        "press-a": "var(--charcoal-color-container-secondary-press-a)",
      },
      "skeleton": "var(--charcoal-color-container-skeleton)",
      "subtle": "var(--charcoal-color-container-subtle)",
      "tertiary": {
        "default": "var(--charcoal-color-container-tertiary-default)",
        "default-a": "var(--charcoal-color-container-tertiary-default-a)",
        "hover": "var(--charcoal-color-container-tertiary-hover)",
        "hover-a": "var(--charcoal-color-container-tertiary-hover-a)",
        "press": "var(--charcoal-color-container-tertiary-press)",
        "pressA": "var(--charcoal-color-container-tertiary-press-a)",
      },
    },
    "icon": {
      "default": "var(--charcoal-color-icon-default)",
      "disable": "var(--charcoal-color-icon-disable)",
      "hover": "var(--charcoal-color-icon-hover)",
      "negative": {
        "default": "var(--charcoal-color-icon-negative-default)",
        "hover": "var(--charcoal-color-icon-negative-hover)",
        "press": "var(--charcoal-color-icon-negative-press)",
      },
      "notice": {
        "default": "var(--charcoal-color-icon-notice-default)",
        "hover": "var(--charcoal-color-icon-notice-hover)",
        "press": "var(--charcoal-color-icon-notice-press)",
      },
      "on-negative": {
        "default": "var(--charcoal-color-icon-on-negative-default)",
        "hover": "var(--charcoal-color-icon-on-negative-hover)",
        "press": "var(--charcoal-color-icon-on-negative-press)",
      },
      "on-neutral": {
        "default": "var(--charcoal-color-icon-on-neutral-default)",
        "hover": "var(--charcoal-color-icon-on-neutral-hover)",
        "press": "var(--charcoal-color-icon-on-neutral-press)",
      },
      "on-notice": {
        "default": "var(--charcoal-color-icon-on-notice-default)",
        "hover": "var(--charcoal-color-icon-on-notice-hover)",
        "press": "var(--charcoal-color-icon-on-notice-press)",
      },
      "on-on-img": {
        "default": "var(--charcoal-color-icon-on-on-img-default)",
        "hover": "var(--charcoal-color-icon-on-on-img-hover)",
        "press": "var(--charcoal-color-icon-on-on-img-press)",
      },
      "on-positive": {
        "default": "var(--charcoal-color-icon-on-positive-default)",
        "hover": "var(--charcoal-color-icon-on-positive-hover)",
        "press": "var(--charcoal-color-icon-on-positive-press)",
      },
      "on-primary": {
        "default": "var(--charcoal-color-icon-on-primary-default)",
        "hover": "var(--charcoal-color-icon-on-primary-hover)",
        "press": "var(--charcoal-color-icon-on-primary-press)",
      },
      "positive": {
        "default": "var(--charcoal-color-icon-positive-default)",
        "hover": "var(--charcoal-color-icon-positive-hover)",
        "press": "var(--charcoal-color-icon-positive-press)",
      },
      "press": "var(--charcoal-color-icon-press)",
      "secondary": {
        "default": "var(--charcoal-color-icon-secondary-default)",
        "hover": "var(--charcoal-color-icon-secondary-hover)",
        "press": "var(--charcoal-color-icon-secondary-press)",
      },
      "tertiary": {
        "default": "var(--charcoal-color-icon-tertiary-default)",
        "hover": "var(--charcoal-color-icon-tertiary-hover)",
        "press": "var(--charcoal-color-icon-tertiary-press)",
      },
    },
    "text": {
      "default": "var(--charcoal-color-text-default)",
      "disable": "var(--charcoal-color-text-disable)",
      "hover": "var(--charcoal-color-text-hover)",
      "info": {
        "default": "var(--charcoal-color-text-info-default)",
        "hover": "var(--charcoal-color-text-info-hover)",
        "press": "var(--charcoal-color-text-info-press)",
      },
      "negative": {
        "default": "var(--charcoal-color-text-negative-default)",
        "hover": "var(--charcoal-color-text-negative-hover)",
        "press": "var(--charcoal-color-text-negative-press)",
      },
      "notice": {
        "default": "var(--charcoal-color-text-notice-default)",
        "hover": "var(--charcoal-color-text-notice-hover)",
        "press": "var(--charcoal-color-text-notice-press)",
      },
      "on-discovery": {
        "default": "var(--charcoal-color-text-on-discovery-default)",
        "hover": "var(--charcoal-color-text-on-discovery-hover)",
        "press": "var(--charcoal-color-text-on-discovery-press)",
      },
      "on-hud": {
        "default": "var(--charcoal-color-text-on-hud-default)",
        "hover": "var(--charcoal-color-text-on-hud-hover)",
        "press": "var(--charcoal-color-text-on-hud-press)",
      },
      "on-negative": {
        "default": "var(--charcoal-color-text-on-negative-default)",
        "hover": "var(--charcoal-color-text-on-negative-hover)",
        "press": "var(--charcoal-color-text-on-negative-press)",
      },
      "on-notice": {
        "default": "var(--charcoal-color-text-on-notice-default)",
        "hover": "var(--charcoal-color-text-on-notice-hover)",
        "press": "var(--charcoal-color-text-on-notice-press)",
      },
      "on-on-img": {
        "default": "var(--charcoal-color-text-on-on-img-default)",
        "hover": "var(--charcoal-color-text-on-on-img-hover)",
        "press": "var(--charcoal-color-text-on-on-img-press)",
      },
      "on-positive": {
        "default": "var(--charcoal-color-text-on-positive-default)",
        "hover": "var(--charcoal-color-text-on-positive-hover)",
        "press": "var(--charcoal-color-text-on-positive-press)",
      },
      "on-primary": {
        "default": "var(--charcoal-color-text-on-primary-default)",
        "hover": "var(--charcoal-color-text-on-primary-hover)",
        "press": "var(--charcoal-color-text-on-primary-press)",
      },
      "placeholder": {
        "default": "var(--charcoal-color-text-placeholder-default)",
        "hover": "var(--charcoal-color-text-placeholder-hover)",
        "press": "var(--charcoal-color-text-placeholder-press)",
      },
      "positive": {
        "default": "var(--charcoal-color-text-positive-default)",
        "hover": "var(--charcoal-color-text-positive-hover)",
        "press": "var(--charcoal-color-text-positive-press)",
      },
      "press": "var(--charcoal-color-text-press)",
      "secondary": {
        "default": "var(--charcoal-color-text-secondary-default)",
        "hover": "var(--charcoal-color-text-secondary-hover)",
        "press": "var(--charcoal-color-text-secondary-press)",
      },
      "tertiary": {
        "default": "var(--charcoal-color-text-tertiary-default)",
        "hover": "var(--charcoal-color-text-tertiary-hover)",
        "press": "var(--charcoal-color-text-tertiary-press)",
      },
      "visited": {
        "default": "var(--charcoal-color-text-visited-default)",
        "hover": "var(--charcoal-color-text-visited-hover)",
        "press": "var(--charcoal-color-text-visited-press)",
      },
    },
  },
  "paragraph-width": {
    "l": "var(--charcoal-paragraph-width-l)",
    "l-compact": "var(--charcoal-paragraph-width-l-compact)",
    "l-cozy": "var(--charcoal-paragraph-width-l-cozy)",
    "m": "var(--charcoal-paragraph-width-m)",
    "m-compact": "var(--charcoal-paragraph-width-m-compact)",
    "m-cozy": "var(--charcoal-paragraph-width-m-cozy)",
    "s": "var(--charcoal-paragraph-width-s)",
    "s-compact": "var(--charcoal-paragraph-width-s-compact)",
    "s-cozy": "var(--charcoal-paragraph-width-s-cozy)",
  },
  "radius": {
    "0": "var(--charcoal-radius-0)",
    "l": "var(--charcoal-radius-l)",
    "m": "var(--charcoal-radius-m)",
    "oval": "var(--charcoal-radius-oval)",
    "s": "var(--charcoal-radius-s)",
    "xl": "var(--charcoal-radius-xl)",
    "xs": "var(--charcoal-radius-xs)",
    "xxl": "var(--charcoal-radius-xxl)",
  },
  "space": {
    "between-checkboxes": {
      "horizontal": "var(--charcoal-space-between-checkboxes-horizontal)",
      "vertical": "var(--charcoal-space-between-checkboxes-vertical)",
    },
    "component": {
      "0": "var(--charcoal-space-component-0)",
      "10": "var(--charcoal-space-component-10)",
      "20": "var(--charcoal-space-component-20)",
      "25": "var(--charcoal-space-component-25)",
      "30": "var(--charcoal-space-component-30)",
      "40": "var(--charcoal-space-component-40)",
      "50": "var(--charcoal-space-component-50)",
    },
    "gap": {
      "gap-buttons": "var(--charcoal-space-gap-gap-buttons)",
      "gap-form-items": "var(--charcoal-space-gap-gap-form-items)",
    },
    "layout": {
      "0": "var(--charcoal-space-layout-0)",
      "10": "var(--charcoal-space-layout-10)",
      "100": "var(--charcoal-space-layout-100)",
      "20": "var(--charcoal-space-layout-20)",
      "25": "var(--charcoal-space-layout-25)",
      "30": "var(--charcoal-space-layout-30)",
      "40": "var(--charcoal-space-layout-40)",
      "50": "var(--charcoal-space-layout-50)",
      "60": "var(--charcoal-space-layout-60)",
      "70": "var(--charcoal-space-layout-70)",
      "80": "var(--charcoal-space-layout-80)",
      "90": "var(--charcoal-space-layout-90)",
    },
    "padding": {
      "padding-card": "var(--charcoal-space-padding-padding-card)",
    },
    "target": {
      "l": "var(--charcoal-space-target-l)",
      "m": "var(--charcoal-space-target-m)",
      "s": "var(--charcoal-space-target-s)",
      "xs": "var(--charcoal-space-target-xs)",
    },
  },
  "text": {
    "font-size": {
      "body": "var(--charcoal-text-font-size-body)",
      "caption": {
        "m": "var(--charcoal-text-font-size-caption-m)",
        "s": "var(--charcoal-text-font-size-caption-s)",
      },
      "heading": {
        "l": "var(--charcoal-text-font-size-heading-l)",
        "m": "var(--charcoal-text-font-size-heading-m)",
        "s": "var(--charcoal-text-font-size-heading-s)",
        "xl": "var(--charcoal-text-font-size-heading-xl)",
        "xs": "var(--charcoal-text-font-size-heading-xs)",
        "xxl": "var(--charcoal-text-font-size-heading-xxl)",
        "xxs": "var(--charcoal-text-font-size-heading-xxs)",
        "xxxl": "var(--charcoal-text-font-size-heading-xxxl)",
        "xxxs": "var(--charcoal-text-font-size-heading-xxxs)",
      },
      "paragraph": "var(--charcoal-text-font-size-paragraph)",
    },
    "font-weight": {
      "bold": "var(--charcoal-text-font-weight-bold)",
      "regular": "var(--charcoal-text-font-weight-regular)",
    },
    "line-height": {
      "body": "var(--charcoal-text-line-height-body)",
      "caption": {
        "m": "var(--charcoal-text-line-height-caption-m)",
        "s": "var(--charcoal-text-line-height-caption-s)",
      },
      "heading": {
        "l": "var(--charcoal-text-line-height-heading-l)",
        "m": "var(--charcoal-text-line-height-heading-m)",
        "s": "var(--charcoal-text-line-height-heading-s)",
        "xl": "var(--charcoal-text-line-height-heading-xl)",
        "xs": "var(--charcoal-text-line-height-heading-xs)",
        "xxl": "var(--charcoal-text-line-height-heading-xxl)",
        "xxs": "var(--charcoal-text-line-height-heading-xxs)",
        "xxxl": "var(--charcoal-text-line-height-heading-xxxl)",
        "xxxs": "var(--charcoal-text-line-height-heading-xxxs)",
      },
      "paragraph": "var(--charcoal-text-line-height-paragraph)",
    },
  },
}
`;

exports[`createTokenObject test: dark theme > should match snapshot 1`] = `
{
  "border-width": {
    "focus": {
      "1": "1px",
      "2": "2px",
    },
    "l": "2px",
    "m": "1px",
  },
  "color": {
    "background": {
      "default": "rgba(31, 31, 31, 1)",
      "overlay": "rgba(0, 0, 0, 0.32)",
      "secondary": "rgba(21, 21, 21, 1)",
      "tertiary": "rgba(6, 6, 6, 1)",
    },
    "border": {
      "default": "rgba(255, 255, 255, 0.36)",
      "disable": "rgba(255, 255, 255, 0.045)",
      "focus": {
        "1": "rgba(114, 181, 245, 1)",
        "2": "rgba(39, 84, 126, 1)",
        "legacy": "rgba(0, 150, 250, 0.32)",
      },
      "hover": "rgba(255, 255, 255, 0.44)",
      "hud": "rgba(31, 31, 31, 1)",
      "negative": "rgba(136, 54, 46, 1)",
      "press": "rgba(255, 255, 255, 0.535)",
      "secondary": "rgba(255, 255, 255, 0.09)",
      "selected": "rgba(8, 114, 190, 1)",
    },
    "container": {
      "default": "rgba(31, 31, 31, 1)",
      "default-a": "rgba(255, 255, 255, 0)",
      "disable": "rgba(51, 51, 51, 1)",
      "discovery": {
        "default": "rgba(197, 60, 51, 1)",
        "hover": "rgba(217, 88, 76, 1)",
        "press": "rgba(233, 114, 102, 1)",
      },
      "hover": "rgba(41, 41, 41, 1)",
      "hover-a": "rgba(255, 255, 255, 0.045)",
      "hud": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(202, 202, 202, 1)",
        "press": "rgba(188, 188, 188, 1)",
      },
      "negative": {
        "default": "rgba(197, 60, 51, 1)",
        "hover": "rgba(217, 88, 76, 1)",
        "press": "rgba(233, 114, 102, 1)",
      },
      "neutral": {
        "default": "rgba(112, 112, 112, 1)",
        "hover": "rgba(130, 130, 130, 1)",
        "press": "rgba(151, 151, 151, 1)",
      },
      "notice": {
        "default": "rgba(235, 178, 19, 1)",
        "hover": "rgba(238, 195, 92, 1)",
        "press": "rgba(252, 225, 167, 1)",
      },
      "on-img": {
        "default": "rgba(0, 0, 0, 0.325)",
        "hover": "rgba(0, 0, 0, 0.42)",
        "press": "rgba(0, 0, 0, 0.555)",
      },
      "positive": {
        "default": "rgba(13, 129, 5, 1)",
        "hover": "rgba(58, 150, 52, 1)",
        "press": "rgba(86, 169, 79, 1)",
      },
      "press": "rgba(51, 51, 51, 1)",
      "press-a": "rgba(255, 255, 255, 0.09)",
      "primary": {
        "default": "rgba(8, 114, 190, 1)",
        "hover": "rgba(55, 136, 208, 1)",
        "press": "rgba(83, 156, 224, 1)",
      },
      "secondary": {
        "default": "rgba(41, 41, 41, 1)",
        "default-a": "rgba(255, 255, 255, 0.045)",
        "hover": "rgba(51, 51, 51, 1)",
        "hover-a": "rgba(255, 255, 255, 0.09)",
        "press": "rgba(81, 81, 81, 1)",
        "press-a": "rgba(255, 255, 255, 0.225)",
      },
      "skeleton": "rgba(255, 255, 255, 0.045)",
      "subtle": "rgba(228, 228, 228, 0.02)",
      "tertiary": {
        "default": "rgba(51, 51, 51, 1)",
        "default-a": "rgba(255, 255, 255, 0.09)",
        "hover": "rgba(81, 81, 81, 1)",
        "hover-a": "rgba(255, 255, 255, 0.225)",
        "press": "rgba(112, 112, 112, 1)",
        "pressA": "rgba(255, 255, 255, 0.36)",
      },
    },
    "icon": {
      "default": "rgba(228, 228, 228, 1)",
      "disable": "rgba(130, 130, 130, 1)",
      "hover": "rgba(202, 202, 202, 1)",
      "negative": {
        "default": "rgba(252, 147, 134, 1)",
        "hover": "rgba(249, 186, 177, 1)",
        "press": "rgba(254, 219, 214, 1)",
      },
      "notice": {
        "default": "rgba(222, 167, 29, 1)",
        "hover": "rgba(238, 195, 92, 1)",
        "press": "rgba(252, 225, 167, 1)",
      },
      "on-negative": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "on-neutral": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "on-notice": {
        "default": "rgba(41, 41, 41, 1)",
        "hover": "rgba(41, 41, 41, 1)",
        "press": "rgba(41, 41, 41, 1)",
      },
      "on-on-img": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "on-positive": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "on-primary": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "positive": {
        "default": "rgba(120, 194, 113, 1)",
        "hover": "rgba(161, 215, 155, 1)",
        "press": "rgba(191, 241, 186, 1)",
      },
      "press": "rgba(188, 188, 188, 1)",
      "secondary": {
        "default": "rgba(175, 175, 175, 1)",
        "hover": "rgba(188, 188, 188, 1)",
        "press": "rgba(202, 202, 202, 1)",
      },
      "tertiary": {
        "default": "rgba(130, 130, 130, 1)",
        "hover": "rgba(175, 175, 175, 1)",
        "press": "rgba(188, 188, 188, 1)",
      },
    },
    "text": {
      "default": "rgba(228, 228, 228, 1)",
      "disable": "rgba(130, 130, 130, 1)",
      "hover": "rgba(202, 202, 202, 1)",
      "info": {
        "default": "rgba(114, 181, 245, 1)",
        "hover": "rgba(166, 205, 245, 1)",
        "press": "rgba(207, 230, 253, 1)",
      },
      "negative": {
        "default": "rgba(252, 147, 134, 1)",
        "hover": "rgba(249, 186, 177, 1)",
        "press": "rgba(254, 219, 214, 1)",
      },
      "notice": {
        "default": "rgba(222, 167, 29, 1)",
        "hover": "rgba(238, 195, 92, 1)",
        "press": "rgba(252, 225, 167, 1)",
      },
      "on-discovery": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "on-hud": {
        "default": "rgba(31, 31, 31, 1)",
        "hover": "rgba(31, 31, 31, 1)",
        "press": "rgba(31, 31, 31, 1)",
      },
      "on-negative": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "on-notice": {
        "default": "rgba(41, 41, 41, 1)",
        "hover": "rgba(41, 41, 41, 1)",
        "press": "rgba(41, 41, 41, 1)",
      },
      "on-on-img": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "on-positive": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "on-primary": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "placeholder": {
        "default": "rgba(112, 112, 112, 1)",
        "hover": "rgba(112, 112, 112, 1)",
        "press": "rgba(112, 112, 112, 1)",
      },
      "positive": {
        "default": "rgba(120, 194, 113, 1)",
        "hover": "rgba(161, 215, 155, 1)",
        "press": "rgba(191, 241, 186, 1)",
      },
      "press": "rgba(188, 188, 188, 1)",
      "secondary": {
        "default": "rgba(175, 175, 175, 1)",
        "hover": "rgba(188, 188, 188, 1)",
        "press": "rgba(202, 202, 202, 1)",
      },
      "tertiary": {
        "default": "rgba(130, 130, 130, 1)",
        "hover": "rgba(175, 175, 175, 1)",
        "press": "rgba(188, 188, 188, 1)",
      },
      "visited": {
        "default": "rgba(191, 160, 246, 1)",
        "hover": "rgba(210, 192, 245, 1)",
        "press": "rgba(233, 223, 255, 1)",
      },
    },
  },
  "paragraph-width": {
    "l": "672px",
    "l-compact": "588px",
    "l-cozy": "924px",
    "m": "448px",
    "m-compact": "392px",
    "m-cozy": "616px",
    "s": "320px",
    "s-compact": "280px",
    "s-cozy": "588px",
  },
  "radius": {
    "0": "0px",
    "l": "12px",
    "m": "8px",
    "oval": "999999px",
    "s": "4px",
    "xl": "16px",
    "xs": "2px",
    "xxl": "24px",
  },
  "space": {
    "between-checkboxes": {
      "horizontal": "12px",
      "vertical": "0px",
    },
    "component": {
      "0": "0px",
      "10": "4px",
      "20": "8px",
      "25": "12px",
      "30": "16px",
      "40": "24px",
      "50": "40px",
    },
    "gap": {
      "gap-buttons": "8px",
      "gap-form-items": "24px",
    },
    "layout": {
      "0": "0px",
      "10": "4px",
      "100": "440px",
      "20": "8px",
      "25": "12px",
      "30": "16px",
      "40": "24px",
      "50": "40px",
      "60": "64px",
      "70": "104px",
      "80": "168px",
      "90": "272px",
    },
    "padding": {
      "padding-card": "24px",
    },
    "target": {
      "l": "48px",
      "m": "40px",
      "s": "32px",
      "xs": "24px",
    },
  },
  "text": {
    "font-size": {
      "body": "16px",
      "caption": {
        "m": "14px",
        "s": "12px",
      },
      "heading": {
        "l": "28px",
        "m": "25px",
        "s": "22px",
        "xl": "32px",
        "xs": "20px",
        "xxl": "36px",
        "xxs": "18px",
        "xxxl": "40px",
        "xxxs": "14px",
      },
      "paragraph": "16px",
    },
    "font-weight": {
      "bold": "700",
      "regular": "400",
    },
    "line-height": {
      "body": "24px",
      "caption": {
        "m": "20px",
        "s": "18px",
      },
      "heading": {
        "l": "36px",
        "m": "32px",
        "s": "28px",
        "xl": "40px",
        "xs": "28px",
        "xxl": "44px",
        "xxs": "24px",
        "xxxl": "52px",
        "xxxs": "20px",
      },
      "paragraph": "28px",
    },
  },
}
`;

exports[`createTokenObject test: light theme > should match snapshot 1`] = `
{
  "border-width": {
    "focus": {
      "1": "1px",
      "2": "2px",
    },
    "l": "2px",
    "m": "1px",
  },
  "color": {
    "background": {
      "default": "rgba(255, 255, 255, 1)",
      "overlay": "rgba(0, 0, 0, 0.325)",
      "secondary": "rgba(243, 243, 243, 1)",
      "tertiary": "rgba(232, 232, 232, 1)",
    },
    "border": {
      "default": "rgba(0, 0, 0, 0.42)",
      "disable": "rgba(0, 0, 0, 0.09)",
      "focus": {
        "1": "rgba(31, 117, 188, 1)",
        "2": "rgba(188, 222, 252, 1)",
        "legacy": "rgba(0, 150, 250, 0.32)",
      },
      "hover": "rgba(0, 0, 0, 0.555)",
      "hud": "rgba(255, 255, 255, 1)",
      "negative": "rgba(253, 206, 199, 1)",
      "press": "rgba(0, 0, 0, 0.683)",
      "secondary": "rgba(0, 0, 0, 0.09)",
      "selected": "rgba(0, 150, 250, 1)",
    },
    "container": {
      "default": "rgba(255, 255, 255, 1)",
      "default-a": "rgba(0, 0, 0, 0)",
      "disable": "rgba(232, 232, 232, 1)",
      "discovery": {
        "default": "rgba(253, 91, 78, 1)",
        "hover": "rgba(206, 54, 46, 1)",
        "press": "rgba(147, 33, 28, 1)",
      },
      "hover": "rgba(243, 243, 243, 1)",
      "hover-a": "rgba(0, 0, 0, 0.047)",
      "hud": {
        "default": "rgba(56, 56, 56, 1)",
        "hover": "rgba(81, 81, 81, 1)",
        "press": "rgba(113, 113, 113, 1)",
      },
      "negative": {
        "default": "rgba(253, 91, 78, 1)",
        "hover": "rgba(206, 54, 46, 1)",
        "press": "rgba(147, 33, 28, 1)",
      },
      "neutral": {
        "default": "rgba(148, 148, 148, 1)",
        "hover": "rgba(113, 113, 113, 1)",
        "press": "rgba(81, 81, 81, 1)",
      },
      "notice": {
        "default": "rgba(254, 214, 61, 1)",
        "hover": "rgba(245, 183, 17, 1)",
        "press": "rgba(231, 157, 20, 1)",
      },
      "on-img": {
        "default": "rgba(0, 0, 0, 0.325)",
        "hover": "rgba(0, 0, 0, 0.42)",
        "press": "rgba(0, 0, 0, 0.555)",
      },
      "positive": {
        "default": "rgba(37, 170, 28, 1)",
        "hover": "rgba(17, 131, 8, 1)",
        "press": "rgba(4, 93, 0, 1)",
      },
      "press": "rgba(232, 232, 232, 1)",
      "press-a": "rgba(0, 0, 0, 0.09)",
      "primary": {
        "default": "rgba(0, 150, 250, 1)",
        "hover": "rgba(31, 117, 188, 1)",
        "press": "rgba(24, 81, 130, 1)",
      },
      "secondary": {
        "default": "rgba(243, 243, 243, 1)",
        "default-a": "rgba(0, 0, 0, 0.047)",
        "hover": "rgba(232, 232, 232, 1)",
        "hover-a": "rgba(0, 0, 0, 0.09)",
        "press": "rgba(217, 217, 217, 1)",
        "press-a": "rgba(0, 0, 0, 0.15)",
      },
      "skeleton": "rgba(0, 0, 0, 0.047)",
      "subtle": "rgba(31, 31, 31, 0.02)",
      "tertiary": {
        "default": "rgba(232, 232, 232, 1)",
        "default-a": "rgba(0, 0, 0, 0.09)",
        "hover": "rgba(217, 217, 217, 1)",
        "hover-a": "rgba(0, 0, 0, 0.15)",
        "press": "rgba(194, 194, 194, 1)",
        "pressA": "rgba(0, 0, 0, 0.24)",
      },
    },
    "icon": {
      "default": "rgba(31, 31, 31, 1)",
      "disable": "rgba(194, 194, 194, 1)",
      "hover": "rgba(56, 56, 56, 1)",
      "negative": {
        "default": "rgba(206, 54, 46, 1)",
        "hover": "rgba(147, 33, 28, 1)",
        "press": "rgba(103, 22, 17, 1)",
      },
      "notice": {
        "default": "rgba(161, 99, 9, 1)",
        "hover": "rgba(110, 72, 5, 1)",
        "press": "rgba(74, 51, 7, 1)",
      },
      "on-negative": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "on-neutral": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(243, 243, 243, 1)",
        "press": "rgba(232, 232, 232, 1)",
      },
      "on-notice": {
        "default": "rgba(31, 31, 31, 1)",
        "hover": "rgba(31, 31, 31, 1)",
        "press": "rgba(31, 31, 31, 1)",
      },
      "on-on-img": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "on-positive": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "on-primary": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "positive": {
        "default": "rgba(17, 131, 8, 1)",
        "hover": "rgba(4, 93, 0, 1)",
        "press": "rgba(4, 93, 0, 1)",
      },
      "press": "rgba(81, 81, 81, 1)",
      "secondary": {
        "default": "rgba(81, 81, 81, 1)",
        "hover": "rgba(56, 56, 56, 1)",
        "press": "rgba(31, 31, 31, 1)",
      },
      "tertiary": {
        "default": "rgba(113, 113, 113, 1)",
        "hover": "rgba(81, 81, 81, 1)",
        "press": "rgba(56, 56, 56, 1)",
      },
    },
    "text": {
      "default": "rgba(31, 31, 31, 1)",
      "disable": "rgba(194, 194, 194, 1)",
      "hover": "rgba(56, 56, 56, 1)",
      "info": {
        "default": "rgba(31, 117, 188, 1)",
        "hover": "rgba(24, 81, 130, 1)",
        "press": "rgba(19, 58, 93, 1)",
      },
      "negative": {
        "default": "rgba(206, 54, 46, 1)",
        "hover": "rgba(147, 33, 28, 1)",
        "press": "rgba(103, 22, 17, 1)",
      },
      "notice": {
        "default": "rgba(161, 99, 9, 1)",
        "hover": "rgba(110, 72, 5, 1)",
        "press": "rgba(74, 51, 7, 1)",
      },
      "on-discovery": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "on-hud": {
        "default": "rgba(228, 228, 228, 1)",
        "hover": "rgba(228, 228, 228, 1)",
        "press": "rgba(228, 228, 228, 1)",
      },
      "on-negative": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "on-notice": {
        "default": "rgba(31, 31, 31, 1)",
        "hover": "rgba(31, 31, 31, 1)",
        "press": "rgba(31, 31, 31, 1)",
      },
      "on-on-img": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "on-positive": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "on-primary": {
        "default": "rgba(255, 255, 255, 1)",
        "hover": "rgba(255, 255, 255, 1)",
        "press": "rgba(255, 255, 255, 1)",
      },
      "placeholder": {
        "default": "rgba(148, 148, 148, 1)",
        "hover": "rgba(148, 148, 148, 1)",
        "press": "rgba(148, 148, 148, 1)",
      },
      "positive": {
        "default": "rgba(17, 131, 8, 1)",
        "hover": "rgba(4, 93, 0, 1)",
        "press": "rgba(7, 64, 4, 1)",
      },
      "press": "rgba(81, 81, 81, 1)",
      "secondary": {
        "default": "rgba(81, 81, 81, 1)",
        "hover": "rgba(56, 56, 56, 1)",
        "press": "rgba(31, 31, 31, 1)",
      },
      "tertiary": {
        "default": "rgba(113, 113, 113, 1)",
        "hover": "rgba(81, 81, 81, 1)",
        "press": "rgba(56, 56, 56, 1)",
      },
      "visited": {
        "default": "rgba(103, 39, 171, 1)",
        "hover": "rgba(70, 32, 115, 1)",
        "press": "rgba(40, 16, 70, 1)",
      },
    },
  },
  "paragraph-width": {
    "l": "672px",
    "l-compact": "588px",
    "l-cozy": "924px",
    "m": "448px",
    "m-compact": "392px",
    "m-cozy": "616px",
    "s": "320px",
    "s-compact": "280px",
    "s-cozy": "588px",
  },
  "radius": {
    "0": "0px",
    "l": "12px",
    "m": "8px",
    "oval": "999999px",
    "s": "4px",
    "xl": "16px",
    "xs": "2px",
    "xxl": "24px",
  },
  "space": {
    "between-checkboxes": {
      "horizontal": "12px",
      "vertical": "0px",
    },
    "component": {
      "0": "0px",
      "10": "4px",
      "20": "8px",
      "25": "12px",
      "30": "16px",
      "40": "24px",
      "50": "40px",
    },
    "gap": {
      "gap-buttons": "8px",
      "gap-form-items": "24px",
    },
    "layout": {
      "0": "0px",
      "10": "4px",
      "100": "440px",
      "20": "8px",
      "25": "12px",
      "30": "16px",
      "40": "24px",
      "50": "40px",
      "60": "64px",
      "70": "104px",
      "80": "168px",
      "90": "272px",
    },
    "padding": {
      "padding-card": "24px",
    },
    "target": {
      "l": "48px",
      "m": "40px",
      "s": "32px",
      "xs": "24px",
    },
  },
  "text": {
    "font-size": {
      "body": "16px",
      "caption": {
        "m": "14px",
        "s": "12px",
      },
      "heading": {
        "l": "28px",
        "m": "25px",
        "s": "22px",
        "xl": "32px",
        "xs": "20px",
        "xxl": "36px",
        "xxs": "18px",
        "xxxl": "40px",
        "xxxs": "14px",
      },
      "paragraph": "16px",
    },
    "font-weight": {
      "bold": "700",
      "regular": "400",
    },
    "line-height": {
      "body": "24px",
      "caption": {
        "m": "20px",
        "s": "18px",
      },
      "heading": {
        "l": "36px",
        "m": "32px",
        "s": "28px",
        "xl": "40px",
        "xs": "28px",
        "xxl": "44px",
        "xxs": "24px",
        "xxxl": "52px",
        "xxxs": "20px",
      },
      "paragraph": "28px",
    },
  },
}
`;
